--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jasmine": "2.5.38",
     "@types/jquery": "^2.0.40",
     "@types/node": "^6.0.42",
+    "@types/semantic-ui": "^2.2.1",
     "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
